注册与邮箱验证
Signed-off-by: 小熊打倒的饭团 <1317524710@qq.com>

--- a/src/main/resources/i18n/forget_en_US.properties
+++ b/src/main/resources/i18n/forget_en_US.properties
@@ -1,18 +1,31 @@
 forget.account=account\uFF1A
 forget.back=Back
 forget.code=captcha\uFF1A
+forget.codeMsg=Verification code error
 forget.confirm=Confirm
+forget.explain=explain
 forget.fill=Please fill in your account
 forget.getback=way\uFF1A
 forget.getcode=Get captcha
+forget.information=Registration or retrieval method
+forget.information_one=How do you want to register or retrieve your account
+forget.information_two=That is to get the key verification code of "set" or "retrieve" password through the account you enter
 forget.land=Go and land
 forget.mailbox=mailbox
 forget.msg=We're ready to go and land
+forget.msg_pass=The two passwords do not match
+forget.msgPasswordRules=Passwords are at least 6 characters,containing letters and numbers,and can be selected for any character
 forget.next=\ next 
 forget.phone=phone
+forget.register=method:
+forget.registerSuccess=login was successful
+forget.regMath=method:
 forget.return=return
 forget.set=Set\uFF1A
 forget.set_one=Please enter the changed password
 forget.set_two=Please confirm the password again
 forget.setAgain=Confirm\uFF1A
+forget.setPassword=Please enter the password to set
+forget.step_one=Basic information
+forget.step_two=complete
 forget.success=success
