--- a/src/main/resources/i18n/forget_zh_CN.properties
+++ b/src/main/resources/i18n/forget_zh_CN.properties
@@ -1,18 +1,31 @@
 forget.account=\u8D26\u53F7\uFF1A
 forget.back=\u4E0A\u4E00\u6B65
 forget.code=\u9A8C\u8BC1\u7801\uFF1A
+forget.codeMsg=\u9A8C\u8BC1\u7801\u9519\u8BEF
 forget.confirm=\u786E\u8BA4\u4FEE\u6539
+forget.explain=\u8BF4\u660E
 forget.fill=\u8BF7\u586B\u5199\u4F60\u7684\u8D26\u53F7
 forget.getback=\u627E\u56DE\u65B9\u5F0F\uFF1A
 forget.getcode=\u83B7\u53D6\u9A8C\u8BC1\u7801
+forget.information="\u6CE8\u518C"\u6216"\u627E\u56DE"\u65B9\u5F0F
+forget.information_one=\u5373\u4F60\u8981\u901A\u8FC7\u4EC0\u4E48\u65B9\u5F0F"\u6CE8\u518C"\u6216"\u627E\u56DE"\u4F60\u7684\u8D26\u53F7
+forget.information_two=\u5373\u901A\u8FC7\u4F60\u8F93\u5165\u7684\u8D26\u53F7\u6765\u83B7\u53D6"\u8BBE\u7F6E"\u6216"\u627E\u56DE"\u5BC6\u7801\u5173\u952E\u7684\u9A8C\u8BC1\u7801
 forget.land=\u524D\u5F80\u767B\u5F55
 forget.mailbox=\u90AE\u7BB1
 forget.msg=\u53EF\u4EE5\u524D\u5F80\u767B\u5F55
+forget.msg_pass=\u4E24\u6B21\u5BC6\u7801\u4E0D\u4E00\u81F4
+forget.msgPasswordRules=\u5BC6\u7801\u81F3\u5C116\u4E2A\u5B57\u7B26\u3001\u5305\u542B\u5B57\u6BCD\u548C\u6570\u5B57\u3001\u53EF\u9009\u4EFB\u610F\u5B57\u7B26
 forget.next=\u4E0B\u4E00\u6B65
 forget.phone=\u624B\u673A\u53F7
+forget.register=\u6CE8\u518C\u65B9\u5F0F\uFF1A
+forget.registerSuccess=\u6CE8\u518C\u6210\u529F
+forget.regMath=\u6CE8\u518C\u65B9\u5F0F\uFF1A
 forget.return=\u8FD4\u56DE
 forget.set=\u8BBE\u7F6E\u5BC6\u7801\uFF1A
 forget.set_one=\u8BF7\u8F93\u5165\u66F4\u6539\u7684\u5BC6\u7801
 forget.set_two=\u8BF7\u518D\u6B21\u786E\u8BA4\u5BC6\u7801
 forget.setAgain=\u786E\u8BA4\u5BC6\u7801\uFF1A
-forget.success=\u9700\u6539\u6210\u529F
+forget.setPassword=\u8BF7\u8F93\u5165\u8981\u8BBE\u7F6E\u7684\u5BC6\u7801
+forget.step_one=\u57FA\u7840\u4FE1\u606F
+forget.step_two=\u5B8C\u6210
+forget.success=\u4FEE\u6539\u6210\u529F
