--- a/src/main/resources/i18n/forget_en_US.properties
+++ b/src/main/resources/i18n/forget_en_US.properties
@@ -5,6 +5,7 @@ forget.codeMsg=Verification code error
 forget.confirm=Confirm
 forget.explain=explain
 forget.fill=Please fill in your account
+forget.fillname=Please fill in the user name
 forget.getback=way\uFF1A
 forget.getcode=Get captcha
 forget.information=Registration or retrieval method
@@ -15,7 +16,7 @@ forget.mailbox=mailbox
 forget.msg=We're ready to go and land
 forget.msg_pass=The two passwords do not match
 forget.msgPasswordRules=Passwords are at least 6 characters,containing letters and numbers,and can be selected for any character
-forget.next=\ next 
+forget.next=next 
 forget.phone=phone
 forget.register=method:
 forget.registerSuccess=login was successful
@@ -29,3 +30,4 @@ forget.setPassword=Please enter the password to set
 forget.step_one=Basic information
 forget.step_two=complete
 forget.success=success
+forget.usernam=name\uFF1A
