--- a/src/main/resources/i18n/forget.properties
+++ b/src/main/resources/i18n/forget.properties
@@ -5,6 +5,7 @@ forget.codeMsg=\u9A8C\u8BC1\u7801\u9519\u8BEF
 forget.confirm=\u786E\u8BA4\u4FEE\u6539
 forget.explain=\u8BF4\u660E
 forget.fill=\u8BF7\u586B\u5199\u4F60\u7684\u8D26\u53F7
+forget.fillname=\u8BF7\u586B\u5199\u7528\u6237\u540D
 forget.getback=\u627E\u56DE\u65B9\u5F0F\uFF1A
 forget.getcode=\u83B7\u53D6\u9A8C\u8BC1\u7801
 forget.information="\u6CE8\u518C"\u6216"\u627E\u56DE"\u65B9\u5F0F
@@ -29,3 +30,4 @@ forget.setPassword=\u8BF7\u8F93\u5165\u8981\u8BBE\u7F6E\u7684\u5BC6\u7801
 forget.step_one=\u57FA\u7840\u4FE1\u606F
 forget.step_two=\u5B8C\u6210
 forget.success=\u4FEE\u6539\u6210\u529F
+forget.usernam=\u7528\u6237\u540D\uFF1A
